--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ section {
   line-height: 117%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: #377042;
   text-decoration: none;
 }
 address {
@@ -170,17 +170,17 @@ address {
     bottom: -1px;
     width: 100%;
     height: 4px;
-    background-color: #404bbf;
+    background-color: #377042;
     border-radius: 2px;
   }
   .link.current {
-    color: #404bbf;
+    color: #377042;
   }
   .link:hover,
   .link:focus,
   .contact:focus,
   .contact:hover {
-    color: #404bbf;
+    color: #377042;
   }
 }
 
@@ -242,7 +242,7 @@ address {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/main-page/Dark-bg_tab2x.jpg);
+      url(../images/main-page/fisherman2x.jpg);
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -251,7 +251,7 @@ address {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/main-page/Dark-bg_desk1x.jpg);
+      url(../images/main-page/fisherman1x.jpg);
     padding: 188px 0;
   }
 }
@@ -262,7 +262,7 @@ address {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/main-page/Dark-bg_desk2x.jpg);
+      url(../images/main-page/fisherman2x.jpg);
   }
 }
 
@@ -287,12 +287,12 @@ address {
 .button,
 .subscribe-btn,
 .button-send:hover {
-  background-color: #404bbf;
+  background-color: #5a9c66;
 }
 .button,
 .subscribe-btn,
 .button-send:focus {
-  background-color: #404bbf;
+  background-color: #5a9c66;
 }
 
 .button {
@@ -309,7 +309,7 @@ address {
   line-height: 150%;
   letter-spacing: 0.04em;
   color: #fff;
-  background-color: #4d5ae5;
+  background-color: #377042;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   text-align: center;
   cursor: pointer;
@@ -323,6 +323,100 @@ address {
 @media only screen and (min-width: 1158px) {
   .button {
     margin: 48px auto 0px auto;
+  }
+}
+
+.bubbles {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+.bubbles li:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0;
+}
+.bubbles li:nth-child(2) {
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+.bubbles li:nth-child(3) {
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+.bubbles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+.bubbles li:nth-child(5) {
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+.bubbles li:nth-child(6) {
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+.bubbles li:nth-child(7) {
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+.bubbles li:nth-child(8) {
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+.bubbles li:nth-child(9) {
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+.bubbles li:nth-child(10) {
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+@keyframes animate {
+  0% {
+    transform: translatey(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+  10% {
+    transform: translatey(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
   }
 }
 /*Features-section*/
@@ -372,14 +466,14 @@ address {
 @media only screen and (min-width: 1158px) {
   .icons-features {
     margin-bottom: 8px;
-    display: flex;
+    display: none;
+
     align-items: center;
     justify-content: center;
-    border: 1px solid #8e8f99;
+
     border-radius: 4px;
     min-width: 264px;
     min-height: 112px;
-    background: #f4f4fd;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -452,12 +546,12 @@ address {
   align-items: center;
   width: 40px;
   height: 40px;
-  background-color: #4d5ae5;
+  background-color: #377042;
   border-radius: 50%;
 }
 .social-link:hover,
 .social-link:focus {
-  background-color: #404bbf;
+  background-color: #5a9c66;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
